Accumulators-and-broadcast-variables.ipynb completed

--- a/Accumulators-and-broadcast-variables.ipynb
+++ b/Accumulators-and-broadcast-variables.ipynb
@@ -175,15 +175,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3672832672.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [5]\u001b[0;36m\u001b[0m\n\u001b[0;31m    spark =  ##complete here\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/10/18 12:18:51 WARN Utils: Your hostname, 1011000011101110 resolves to a loopback address: 127.0.1.1; using 192.168.1.72 instead (on interface wlp3s0)\n",
+      "22/10/18 12:18:51 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/10/18 12:18:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "root\n",
+      " |-- firstname: string (nullable = true)\n",
+      " |-- lastname: string (nullable = true)\n",
+      " |-- country: string (nullable = true)\n",
+      " |-- state: string (nullable = true)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+--------+-------+-----+\n",
+      "|firstname|lastname|country|state|\n",
+      "+---------+--------+-------+-----+\n",
+      "|James    |Smith   |USA    |CA   |\n",
+      "|Michael  |Rose    |USA    |NY   |\n",
+      "|Robert   |Williams|USA    |CA   |\n",
+      "|Maria    |Jones   |USA    |FL   |\n",
+      "+---------+--------+-------+-----+\n",
+      "\n"
      ]
     }
    ],
@@ -191,10 +234,11 @@
     "import pyspark\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "spark =  ##complete here\n",
+    "spark =  SparkSession.builder.appName(\"broadcast\").getOrCreate()\n",
+    "\n",
     "\n",
     "states = {\"NY\":\"New York\", \"CA\":\"California\", \"FL\":\"Florida\"}\n",
-    "broadcastStates = ##complete here\n",
+    "broadcastStates =  spark.sparkContext.broadcast(states)\n",
     "\n",
     "data = [(\"James\",\"Smith\",\"USA\",\"CA\"),\n",
     "    (\"Michael\",\"Rose\",\"USA\",\"NY\"),\n",
@@ -210,7 +254,41 @@
     "def state_convert(code):\n",
     "    return broadcastStates.value[code]\n",
     "\n",
-    "result = ##complete here\n",
+    "# result = ##complete here\n",
+    "# result.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result= df.rdd.map(lambda x: (x[0],x[1],x[2],state_convert(x[3]))).toDF(columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+--------+-------+----------+\n",
+      "|firstname|lastname|country|state     |\n",
+      "+---------+--------+-------+----------+\n",
+      "|James    |Smith   |USA    |California|\n",
+      "|Michael  |Rose    |USA    |New York  |\n",
+      "|Robert   |Williams|USA    |California|\n",
+      "|Maria    |Jones   |USA    |Florida   |\n",
+      "+---------+--------+-------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "result.show(truncate=False)"
    ]
   },
