udemy courses task completed

--- a/Assignment/udemy_courses/Udemy Courses Assignment.ipynb
+++ b/Assignment/udemy_courses/Udemy Courses Assignment.ipynb
@@ -895,6 +895,375 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 4. How are courses related?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Which courses offer the best cost benefit?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+------------------+\n",
+      "|        course_title|price|  content_duration|\n",
+      "+--------------------+-----+------------------+\n",
+      "|Ultimate Investme...|  200|               1.5|\n",
+      "|Complete GST Cour...|   75|              39.0|\n",
+      "|Financial Modelin...|   45|               2.5|\n",
+      "|Beginner to Pro -...|   95|               3.0|\n",
+      "|How To Maximize Y...|  200|               2.0|\n",
+      "|Trading Penny Sto...|  150|               3.0|\n",
+      "|Investing And Tra...|   65|               1.0|\n",
+      "|Trading Stock Cha...|   95|               2.5|\n",
+      "|Options Trading 3...|  195|               2.5|\n",
+      "|The Only Investme...|  200|               1.0|\n",
+      "|Forex Trading Sec...|  200|               5.0|\n",
+      "|Trading Options W...|  200|               1.0|\n",
+      "|Financial Managem...|   30|               1.5|\n",
+      "|Forex Trading Cou...|  195|               2.0|\n",
+      "|Python Algo Tradi...|  200|               7.0|\n",
+      "|Short Selling: Le...|   75|               1.5|\n",
+      "|Basic Technical A...|   20|               1.5|\n",
+      "|The Complete Char...|  200|               4.0|\n",
+      "|7 Deadly Mistakes...|   50|               1.5|\n",
+      "|Financial Stateme...|   95|0.5833333333333334|\n",
+      "+--------------------+-----+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_cost_benefit = df.select('course_title','price','content_duration')\n",
+    "best_cost_benefit.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- course_title: string (nullable = true)\n",
+      " |-- price: string (nullable = true)\n",
+      " |-- content_duration: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_cost_benefit.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_cost_benefit = best_cost_benefit.withColumn(\"price\",col(\"price\").cast(\"float\")).withColumn(\"content_duration\",col(\"content_duration\").cast(\"float\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- course_title: string (nullable = true)\n",
+      " |-- price: float (nullable = true)\n",
+      " |-- content_duration: float (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_cost_benefit.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+----------------+\n",
+      "|        course_title|price|content_duration|\n",
+      "+--------------------+-----+----------------+\n",
+      "|Ultimate Investme...|200.0|             1.5|\n",
+      "|Complete GST Cour...| 75.0|            39.0|\n",
+      "|Financial Modelin...| 45.0|             2.5|\n",
+      "|Beginner to Pro -...| 95.0|             3.0|\n",
+      "|How To Maximize Y...|200.0|             2.0|\n",
+      "|Trading Penny Sto...|150.0|             3.0|\n",
+      "|Investing And Tra...| 65.0|             1.0|\n",
+      "|Trading Stock Cha...| 95.0|             2.5|\n",
+      "|Options Trading 3...|195.0|             2.5|\n",
+      "|The Only Investme...|200.0|             1.0|\n",
+      "|Forex Trading Sec...|200.0|             5.0|\n",
+      "|Trading Options W...|200.0|             1.0|\n",
+      "|Financial Managem...| 30.0|             1.5|\n",
+      "|Forex Trading Cou...|195.0|             2.0|\n",
+      "|Python Algo Tradi...|200.0|             7.0|\n",
+      "|Short Selling: Le...| 75.0|             1.5|\n",
+      "|Basic Technical A...| 20.0|             1.5|\n",
+      "|The Complete Char...|200.0|             4.0|\n",
+      "|7 Deadly Mistakes...| 50.0|             1.5|\n",
+      "|Financial Stateme...| 95.0|       0.5833333|\n",
+      "+--------------------+-----+----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_cost_benefit.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "|        course_title|price|content_duration|content_dutation_minutes|duration_minPerPrice|\n",
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "|Ultimate Investme...|200.0|             1.5|                    90.0|                0.45|\n",
+      "|Complete GST Cour...| 75.0|            39.0|                  2340.0|                31.2|\n",
+      "|Financial Modelin...| 45.0|             2.5|                   150.0|  3.3333333333333335|\n",
+      "|Beginner to Pro -...| 95.0|             3.0|                   180.0|   1.894736842105263|\n",
+      "|How To Maximize Y...|200.0|             2.0|                   120.0|                 0.6|\n",
+      "|Trading Penny Sto...|150.0|             3.0|                   180.0|                 1.2|\n",
+      "|Investing And Tra...| 65.0|             1.0|                    60.0|  0.9230769230769231|\n",
+      "|Trading Stock Cha...| 95.0|             2.5|                   150.0|  1.5789473684210527|\n",
+      "|Options Trading 3...|195.0|             2.5|                   150.0|  0.7692307692307693|\n",
+      "|The Only Investme...|200.0|             1.0|                    60.0|                 0.3|\n",
+      "|Forex Trading Sec...|200.0|             5.0|                   300.0|                 1.5|\n",
+      "|Trading Options W...|200.0|             1.0|                    60.0|                 0.3|\n",
+      "|Financial Managem...| 30.0|             1.5|                    90.0|                 3.0|\n",
+      "|Forex Trading Cou...|195.0|             2.0|                   120.0|  0.6153846153846154|\n",
+      "|Python Algo Tradi...|200.0|             7.0|                   420.0|                 2.1|\n",
+      "|Short Selling: Le...| 75.0|             1.5|                    90.0|                 1.2|\n",
+      "|Basic Technical A...| 20.0|             1.5|                    90.0|                 4.5|\n",
+      "|The Complete Char...|200.0|             4.0|                   240.0|                 1.2|\n",
+      "|7 Deadly Mistakes...| 50.0|             1.5|                    90.0|                 1.8|\n",
+      "|Financial Stateme...| 95.0|       0.5833333|                    35.0|  0.3684210526315789|\n",
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_cost_benefit = best_cost_benefit.withColumn('content_dutation_minutes',col('content_duration')*60)\\\n",
+    "                                        .withColumn('duration_minPerPrice',col('content_dutation_minutes')/col('price'))\n",
+    "                    \n",
+    "best_cost_benefit.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "|        course_title|price|content_duration|content_dutation_minutes|duration_minPerPrice|\n",
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "|TRADER BOT: Intro...| 20.0|            70.0|                  4200.0|               210.0|\n",
+      "|The Complete Figu...| 50.0|            78.5|                  4710.0|                94.2|\n",
+      "|Modern E-Commerce...| 50.0|            66.5|                  3990.0|                79.8|\n",
+      "|Discover How to D...| 65.0|            62.0|                  3720.0|   57.23076923076923|\n",
+      "|Financial Risk Ma...| 50.0|            47.0|                  2820.0|                56.4|\n",
+      "|Bookkeeping Pract...| 35.0|            31.5|                  1890.0|                54.0|\n",
+      "|The Original Comp...| 20.0|            18.0|                  1080.0|                54.0|\n",
+      "|Practical Account...| 35.0|            31.5|                  1890.0|                54.0|\n",
+      "|CAIIB Advanced Ba...| 25.0|            20.5|                  1230.0|                49.2|\n",
+      "|Introduction to M...| 20.0|            16.0|                   960.0|                48.0|\n",
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_cost_benefit= best_cost_benefit.orderBy(best_cost_benefit.duration_minPerPrice.desc())\n",
+    "best_cost_benefit.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3668"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_cost_benefit.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3661"
+      ]
+     },
+     "execution_count": 275,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_cost_benefit.distinct().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "|        course_title|price|content_duration|content_dutation_minutes|duration_minPerPrice|\n",
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "|TRADER BOT: Intro...| 20.0|            70.0|                  4200.0|               210.0|\n",
+      "|The Complete Figu...| 50.0|            78.5|                  4710.0|                94.2|\n",
+      "|Modern E-Commerce...| 50.0|            66.5|                  3990.0|                79.8|\n",
+      "|Discover How to D...| 65.0|            62.0|                  3720.0|   57.23076923076923|\n",
+      "|Financial Risk Ma...| 50.0|            47.0|                  2820.0|                56.4|\n",
+      "|Practical Account...| 35.0|            31.5|                  1890.0|                54.0|\n",
+      "|Bookkeeping Pract...| 35.0|            31.5|                  1890.0|                54.0|\n",
+      "|The Original Comp...| 20.0|            18.0|                  1080.0|                54.0|\n",
+      "|CAIIB Advanced Ba...| 25.0|            20.5|                  1230.0|                49.2|\n",
+      "|Introduction to M...| 20.0|            16.0|                   960.0|                48.0|\n",
+      "|The Complete Web ...| 20.0|            15.5|                   930.0|                46.5|\n",
+      "|Gibson's Learn & ...| 50.0|            38.0|                  2280.0|                45.6|\n",
+      "|Curso Blender 3D ...| 20.0|            14.5|                   870.0|                43.5|\n",
+      "|Anatomy for Figur...| 95.0|            68.5|                  4110.0|   43.26315789473684|\n",
+      "|Diseño Gráfico fá...| 20.0|            13.5|                   810.0|                40.5|\n",
+      "|Build A Complete ...| 20.0|            13.5|                   810.0|                40.5|\n",
+      "|B Com Accountancy...| 50.0|            31.5|                  1890.0|                37.8|\n",
+      "|Complete Website ...| 20.0|            12.5|                   750.0|                37.5|\n",
+      "|Introduction to B...| 20.0|            12.0|                   720.0|                36.0|\n",
+      "|       Corel Draw x7| 20.0|            12.0|                   720.0|                36.0|\n",
+      "+--------------------+-----+----------------+------------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "distinct_best_cost_benefit = best_cost_benefit.distinct().orderBy(best_cost_benefit.duration_minPerPrice.desc())\n",
+    "distinct_best_cost_benefit.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_cost_benefit.toPandas().to_csv('OutputDatas/4. Best_cost_benefit.csv',index= False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 6. Find the courses which have more than 15 lectures."
    ]
   },
